Fixed some layout issues

--- a/src/resource/custom.css
+++ b/src/resource/custom.css
@@ -5,9 +5,11 @@
     -fx-background: aliceblue;
 }
 
-
+.myCreationView{
+}
 .myObjectListView {
 	-fx-min-width: 450
+	-fx-padding: 0 0 10 0;
 }
 
 .myFormView {
